Include common.ErrorResponse in docs
